Set up polymorphic associations between LocalizedText and Host/Place/Room.
Create a default LocalizedText for
each Host/Place/Room.

```console
yarn psy db:migrate
yarn uspec spec/unit/models
```

Also flesh out the LocalizedText controller. Since LocalizedText belongs to different types (Host/Place/Room), restricting the controller to only allow access to owned LocalizedText requires a different strategy. The switch statement used is future proofed so that if LocalizedText is added to another model in the future, access will automatically be restricted until it is explicitly added to the controller. Note that not-found (404), is preferred over forbidden (403), so as to avoid giving away information about the presence or lack thereof of the target. This also aligns with the not-found response returned when `user.associationQuery('<some-association').findOrFail(this.castParam('id', 'bigint'))` is used to limit access to owned resources.

```console
yarn uspec spec/unit/controllers/V1/Host/LocalizedTextsController.spec.ts
```

Before committing, ensure all specs pass:

```console
yarn uspec
```
